<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="UI_Hading_my_music">MyMusic</string>
    <string name="UI_no_song_playing">No song playing</string>
    <string name="UI_previous">Previous</string>
    <string name="UI_play_pause">Play/Pause</string>
    <string name="UI_next">Next</string>
    <string name="music_note">music_note</string>
    <string name="song_name">Song Name</string>
    <string name="RemainingTime_00_00">00:00</string>
    <string name="display_current_playing_song_name">CurrentPlayingSongName</string>
    <string name="app_name_heading">AppHeading</string>
    <string name="starting_00_00">00:00</string>
    <string name="ending_00_00">00:00</string>
    <string name="song_duration">00:00</string>
    <string name="no_song_playing">No Song Playing</string>
</resources>